# python-powerpoint-chart

./: LICENSE  README.md  pyproject.toml
python-powerpoint-chart/: __main__.py
samples/: python-test.pptx  updated_presentation.pptx
